feat(stdin): add stdin
